# advanced_finances

./: main.py  pyproject.toml
.github/workflows/: black.yml
API/: data_fetcher.py
algorithms/: HFT_test_1.py  trade_evaluation.py
engine/apps/backtest/: engine.py  execution_handler.py  portfolio.py  report.py
engine/apps/backtest/analytics/: metrics.py
engine/apps/data_managers/: market_data_manager.py  parquet_manager.py  scraper_manager.py
engine/apps/data_managers/clickhouse/: client.py  data_manager.py
engine/apps/data_managers/clickhouse/managers/: klines_manager.py  portfolio_manager.py  trades_manager.py
engine/apps/data_managers/managers/: klines_manager.py  portfolio_manager.py  trades_manager.py
engine/apps/feature_engine/pipelines/: ta_basic.py
engine/core/bars/: bars.py  dollar_bars.py  dollar_imbalance_bars.py  dollar_run_bars.py  information_bars.py  tick_bars.py  tick_imbalance_bars.py  tick_run_bars.py  time_bars.py  volume_bars.py  volume_imbalance_bars.py  volume_run_bars.py
engine/core/strategies/: strategy.py
engine/core/strategies/ta_strategies/: RSI_strategy.py
utils/charts/: candle_chart.py  chart.py  order_book_chart.py
utils/cli/: cli.py
utils/global_variables/: GLOBAL_VARIABLES.py  SCHEMAS.py
utils/logger/: logger.py
