[project]
name = "trading"
version = "0.1.0"
description = ""
authors = [
    {name = "Dmytro Khvedchuk",email = "dmytro.khvedchuk.dev@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.13,<3.14"
dependencies = [
    "aiohappyeyeballs (==2.6.1)",
    "aiohttp (==3.12.15)",
    "aiosignal (==1.4.0)",
    "annotated-types (==0.7.0)",
    "anyio (==4.10.0)",
    "argon2-cffi (==25.1.0)",
    "argon2-cffi-bindings (==25.1.0)",
    "arrow (==1.3.0)",
    "asttokens (==3.0.0)",
    "async-lru (==2.0.5)",
    "asyncpg (==0.30.0)",
    "attrs (==25.3.0)",
    "babel (==2.17.0)",
    "beautifulsoup4 (==4.13.4)",
    "binance (==0.3.61)",
    "binance-common (==1.2.0)",
    "binance-sdk-derivatives-trading-usds-futures (==1.2.0)",
    "black (==25.1.0)",
    "bleach (==6.2.0)",
    "bokeh (==3.7.3)",
    "build (==1.3.0)",
    "cachecontrol (==0.14.3)",
    "certifi (==2025.8.3)",
    "cffi (==1.17.1)",
    "charset-normalizer (==3.4.3)",
    "cleo (==2.1.0)",
    "click (==8.2.1)",
    "clickhouse-connect (==0.8.18)",
    "clickhouse-driver (==0.2.9)",
    "colorama (==0.4.6)",
    "comm (==0.2.3)",
    "contourpy (==1.3.3)",
    "crashtest (==0.4.1)",
    "dateparser (==1.2.2)",
    "debugpy (==1.8.16)",
    "decorator (==5.2.1)",
    "defusedxml (==0.7.1)",
    "distlib (==0.4.0)",
    "dotenv (==0.9.9)",
    "dulwich (==0.22.8)",
    "executing (==2.2.0)",
    "fastjsonschema (==2.21.2)",
    "filelock (==3.19.1)",
    "findpython (==0.6.3)",
    "fqdn (==1.5.1)",
    "frozenlist (==1.7.0)",
    "greenlet (==3.2.4)",
    "h11 (==0.16.0)",
    "httpcore (==1.0.9)",
    "httpx (==0.28.1)",
    "idna (==3.10)",
    "installer (==0.7.0)",
    "ipykernel (==6.30.1)",
    "ipython (==9.4.0)",
    "ipython-pygments-lexers (==1.1.1)",
    "isoduration (==20.11.0)",
    "jaraco-classes (==3.4.0)",
    "jaraco-context (==6.0.1)",
    "jaraco-functools (==4.3.0)",
    "jedi (==0.19.2)",
    "jinja2 (==3.1.6)",
    "json5 (==0.12.1)",
    "jsonpointer (==3.0.0)",
    "jsonschema (==4.25.0)",
    "jsonschema-specifications (==2025.4.1)",
    "jupyter-events (==0.12.0)",
    "jupyter-lsp (==2.2.6)",
    "jupyter-client (==8.6.3)",
    "jupyter-core (==5.8.1)",
    "jupyter-server (==2.16.0)",
    "jupyter-server-terminals (==0.5.3)",
    "jupyterlab (==4.4.5)",
    "jupyterlab-pygments (==0.3.0)",
    "jupyterlab-server (==2.27.3)",
    "keyring (==25.6.0)",
    "lark (==1.2.2)",
    "lz4 (==4.4.4)",
    "markupsafe (==3.0.2)",
    "matplotlib-inline (==0.1.7)",
    "mistune (==3.1.3)",
    "more-itertools (==10.7.0)",
    "msgpack (==1.1.1)",
    "multidict (==6.6.3)",
    "mypy-extensions (==1.1.0)",
    "narwhals (==2.0.1)",
    "nbclient (==0.10.2)",
    "nbconvert (==7.16.6)",
    "nbformat (==5.10.4)",
    "nest-asyncio (==1.6.0)",
    "notebook (==7.4.5)",
    "notebook-shim (==0.2.4)",
    "numpy (==2.3.2)",
    "overrides (==7.7.0)",
    "packaging (==25.0)",
    "pandas (==2.3.1)",
    "pandocfilters (==1.5.1)",
    "parso (==0.8.4)",
    "pathspec (==0.12.1)",
    "pbs-installer (==2025.8.18)",
    "pillow (==11.3.0)",
    "pkginfo (==1.12.1.2)",
    "platformdirs (==4.3.8)",
    "polars (==1.32.3)",
    "prometheus-client (==0.22.1)",
    "prompt-toolkit (==3.0.51)",
    "propcache (==0.3.2)",
    "psutil (==7.0.0)",
    "pure-eval (==0.2.3)",
    "pyarrow (==21.0.0)",
    "pycparser (==2.22)",
    "pycryptodome (==3.23.0)",
    "pydantic (==2.11.7)",
    "pydantic-core (==2.33.2)",
    "pygments (==2.19.2)",
    "pyproject-hooks (==1.2.0)",
    "python-binance (==1.0.29)",
    "python-dateutil (==2.9.0.post0)",
    "python-dotenv (==1.1.1)",
    "python-json-logger (==3.3.0)",
    "pytz (==2025.2)",
    "pywin32 (==311)",
    "pywin32-ctypes (==0.2.3)",
    "pywinpty (==3.0.0)",
    "pyyaml (==6.0.2)",
    "pyzmq (==27.0.1)",
    "rapidfuzz (==3.13.0)",
    "referencing (==0.36.2)",
    "regex (==2025.7.34)",
    "requests (==2.32.4)",
    "requests-toolbelt (==1.0.0)",
    "rfc3339-validator (==0.1.4)",
    "rfc3986-validator (==0.1.1)",
    "rfc3987-syntax (==1.1.0)",
    "rpds-py (==0.27.0)",
    "ruff (==0.12.8)",
    "send2trash (==1.8.3)",
    "setuptools (==80.9.0)",
    "shellingham (==1.5.4)",
    "six (==1.17.0)",
    "sniffio (==1.3.1)",
    "soupsieve (==2.7)",
    "sqlalchemy (==2.0.43)",
    "stack-data (==0.6.3)",
    "terminado (==0.18.1)",
    "tinycss2 (==1.4.0)",
    "tomlkit (==0.13.3)",
    "tornado (==6.5.2)",
    "tqdm (==4.67.1)",
    "traitlets (==5.14.3)",
    "trove-classifiers (==2025.8.26.11)",
    "types-python-dateutil (==2.9.0.20250809)",
    "typing-inspection (==0.4.1)",
    "typing-extensions (==4.14.1)",
    "tzdata (==2025.2)",
    "tzlocal (==5.3.1)",
    "uri-template (==1.3.0)",
    "urllib3 (==2.5.0)",
    "virtualenv (==20.32.0)",
    "wcwidth (==0.2.13)",
    "webcolors (==24.11.1)",
    "webencodings (==0.5.1)",
    "websocket-client (==1.8.0)",
    "websockets (==15.0.1)",
    "xyzservices (==2025.4.0)",
    "yarl (==1.20.1)",
    "zstandard (==0.24.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
